k8s/production/database/adminer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer
  namespace: tasks-db
  labels:
    app.kubernetes.io/name: adminer
    app.kubernetes.io/component: db-ui
    app.kubernetes.io/part-of: task-manager
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: adminer
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
